[workspace]
resolver = "2"

members = [
    "contracts/achievement_nft",
    "contracts/reward_token",
    "contracts/puzzle_verification", 
    "contracts/guild",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
